[package]
name = "clob"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
log = { version = "0.4.28", features = ["kv_serde"]}
tracing-subscriber = "0.3.22"
tokio = { version = "1.48.0", features = ["full"]}
libmdbx = "0.6.4"
tokio-tungstenite = "0.28.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
futures-util = "0.3.31"
criterion = "0.8.0"

[[bench]]
name="clob_benchmark"
harness=false